# golem

./: .gitignore  README.md  pyproject.toml  results.xml
fpga/: tangnano20k.cst
gds/: README.md  config.json
golden/: README.md  debug_error.py  eval.py  greedy.py  model.py  ops.py  run.py  spec.py  vectors.py
mind/: config.py  download_data.py  model.py  prepare_data.py  sample.py  train.py  train_tokenizer.py
quant/: calibrate.py  pack.py  quantize.py  verify_pack.py  weights.py
rtl/: attmul_row.sv  block.sv  divu.sv  gelu_lut.sv  golem.sv  golem_fpga.sv  golem_mem.svh  golem_top.sv  mac_tile.sv  matmul_row.sv  mem_arbiter.sv  requant.sv  rmsnorm.sv  sdram_model.sv  sim_mem.sv  softmax_row.sv  uart_tx.sv
scripts/: build_fpga.sh  read_story.py
sim/: conductor.py  results.xml  run.py  run_conductor.py  run_golem.py  run_matmul.py  run_soc.py  run_top.py  test_attmul_row.py  test_block.py  test_gelu_lut.py  test_golem.py  test_matmul_row.py  test_rmsnorm.py  test_softmax_row.py  test_top.py  test_uart.py
sim/build_attmul/: sim.vvp
sim/build_block/: sim.vvp
sim/build_gelu/: sim.vvp
sim/build_golem/: sim.vvp
sim/build_matmul/: sim.vvp
sim/build_rmsnorm/: sim.vvp
sim/build_soc/: sim.vvp
sim/build_softmax/: sim.vvp
synth/: raw_block.txt  raw_divu.txt  raw_gelu_lut.txt  raw_mac_tile.txt  raw_matmul_row.txt  raw_requant.txt  raw_rmsnorm.txt  raw_softmax_row.txt  report.sh  report.txt  stat.sh
tests/: test_golden.py  test_smoke.py
web/: gen_trace.py  index.html  run_trace.py  trace.json
